EE Fixed #16322: Function "Visibility - Nowhere" does not work correctly.

--- a/skin/frontend/enterprise/default/css/styles.css
+++ b/skin/frontend/enterprise/default/css/styles.css
@@ -1048,7 +1048,7 @@ dd.even { background:#f6f6f6; }*/
 /* jQzoom */
 div.jqZoomTitle { z-index:5000; text-align:center; position:absolute; top:0; left:0; width:100%; color:#fff; background:#999; }
 .jqZoomPup { overflow:hidden; background-color:#fff; z-index:10; border-color:#fff; border-style:solid; cursor:crosshair !important; /* -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=60)"; -moz-opacity:0.6; opacity:0.6; */ }
-.product-image { cursor:pointer !important; }
+a.product-image { cursor:pointer !important; }
 p.product-image { cursor:default !important; }
 .zoom-activated {}
 .jqZoomPup img { border:0; }
